# Fetal-Brain-MRI

./: .gitignore  2026-05-28.md  AGENTS.md  PLAN.md  PLANS.md  PROGRESS.md  pyproject.toml
app/: main.py
app/templates/: calculator.html
src/fetal_brain_mri/: __init__.py  bands.py  calculator.py  consensus.py  ddx.py  gestational_age.py  inputs.py  normative_models.py  registry.py  report.py  text_parser.py
src/fetal_rag/: __init__.py  __main__.py  chunking.py  config.py  embeddings.py  fetch.py  ingest.py  pdf.py  prompts.py  rag.py  references.py  store.py  tfidf.py  types.py  web_app.py
tests/: test_bands.py  test_calculator.py  test_consensus.py  test_ddx.py  test_gestational_age.py  test_normative_models.py  test_registry.py  test_registry_full.py  test_report.py
vector_db/fetal_mri/: chunks.jsonl  tfidf_matrix.npz  tfidf_meta.json  tfidf_vectorizer.joblib
